--- a/RayTracing.vcxproj.filters
+++ b/RayTracing.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="RayTracing\src\Image.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RayTracing\src\Render.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RayTracing\src\App.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RayTracing\stb_img\stb_image_write.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RayTracing\src\Render.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
