--- a/RayTracing.vcxproj.filters
+++ b/RayTracing.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="RayTracing\src\Render.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RayTracing\src\Camera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RayTracing\src\App.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="submodules\glm\glm\glm.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RayTracing\src\Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
